--- a/kazoo/images/kz-dev-base/Dockerfile
+++ b/kazoo/images/kz-dev-base/Dockerfile
@@ -2,46 +2,78 @@ ARG ERL_VERSION=latest
 FROM erlang:${ERL_VERSION}
 ARG ERL_VERSION
 
-RUN echo "$ERL_VERSION" > /otp_version
-
+# http://bugs.python.org/issue19846
+# > At the moment, setting "LANG=C" on a Linux system *fundamentally breaks Python 3*
+#   and that's not OK.
+ENV LANG C.UTF-8
 ENV DEBIAN_FRONTEND=noninteractive
 ENV APT_LISTCHANGES_FRONTEND=none
 
-RUN apt-get update -y
-RUN apt-get install -y \
-    ## editors and shell
-    vim emacs-nox ctags bash-completion tmux silversearcher-ag colordiff \
-    ## useful tools
-    sed strace tcpdump net-tools ntpdate python dnsutils \
-    ## Kazoo dependecies
-    zip unzip libexpat1-dev htmldoc sox libsox-fmt-all ghostscript \
-    imagemagick libtiff-tools libreoffice-common
+RUN set -ex \
+        && echo "$ERL_VERSION" > /otp_version \
+        && echo ":: Install them all!" \
+        && apt-get update --no-install-recommends -y \
+        && apt-get install -y \
+            ## editors and shell
+            neovim emacs-nox ctags bash-completion tmux silversearcher-ag colordiff \
+            ## useful tools
+            man less whois strace tcpdump net-tools ntpdate dnsutils \
+            ## Kazoo dependecies
+            zip unzip libexpat1-dev htmldoc sox libsox-fmt-all ghostscript \
+            imagemagick libtiff-tools openjdk-8-jre libreoffice-writer \
+            ## performance tools
+            perf-tools-unstable \
+        \
+        && echo ":: Installing su-exec" \
+        && git clone https://github.com/ncopa/su-exec.git /tmp/su-exec \
+        && cd /tmp/su-exec \
+        && make \
+        && cp su-exec /usr/bin/su-exec \
+        && cd / \
+        \
+        && echo ":: Installing dotfiles" \
+        && mkdir -p /home/wefwef \
+        && (curl -L https://api.github.com/repos/icehess/dotfiles/tarball/docker-lite \
+              | tar -C /home/wefwef -xz --strip 1 \
+           ) \
+        \
+        && echo ":: Installing fzf" \
+        && mkdir -p /home/wefwef/.fzf \
+        && (curl -L https://api.github.com/repos/junegunn/fzf/tarball \
+              | tar -C /home/wefwef/.fzf -xz --strip 1 \
+           ) \
+        && cd /home/wefwef/.fzf/bin \
+        && (curl -fL \
+                $(curl -Ls "https://api.github.com/repos/junegunn/fzf-bin/releases/latest" \
+                    | grep browser_download_url \
+                    | grep linux_amd64 \
+                    | cut -d'"' -f4 \
+                 ) \
+              | tar xzf - \
+           ) \
+        \
+        && echo ":: Setting up nvim" \
+        && HOME=/home/wefwef nvim +PlugInstall +qall --cmd 'set rtp^=/home/wefwef/.vim' \
+        && mv /home/wefwef/.dotfiles-site/files/vim/plugins/kazoo_erlc.vim \
+                /home/wefwef/.vim/bundle/ale/ale_linters/erlang/ \
+        \
+        && echo ":: Setting up root dotfiles" \
+        && rm -rf /root && cp -R /home/wefwef /root \
+        \
+        && echo ":: Cleanup!!" \
+        && for dir in /home/wefwef/.vim/bundle/* ; do rm -rf $dir/.git ; done \
+        && for dir in /home/wefwef/.vim/bundle/*/doc ; do rm -rf $dir ; done \
+        && for dir in /home/wefwef/.vim/bundle/*/test; do rm -rf $dir ; done \
+        && find /home/wefwef/.vim/bundle/ -name *.png -exec rm {} \; \
+        && find /home/wefwef/.vim/bundle/ -name *.gif -exec rm {} \; \
+        && find /home/wefwef/.vim/bundle/ -name *.jpg -exec rm {} \; \
+        && find /home/wefwef/.vim/bundle/ -name *.md -exec rm {} \; \
+        && find /home/wefwef/.vim/bundle/ -name LICENCE -exec rm {} \; \
+        && rm -rf /tmp/* \
+        && rm -rf /var/lib/apt/lists/*
 
-RUN git clone https://github.com/ncopa/su-exec.git /tmp/su-exec
-
-RUN cd /tmp/su-exec \
-    && make \
-    && cp su-exec /usr/bin/su-exec \
-    && rm -rf /tmp/*
-
-ARG FZF_VER=0.17.4
-ENV FZF_URL https://github.com/junegunn/fzf-bin/releases/download/${FZF_VER:-0.17.4}/fzf-${FZF_VER:-0.17.4}-linux_amd64.tgz
-
-RUN curl https://codeload.github.com/icehess/dotfiles/zip/docker > /tmp/docker.zip \
-    && ( cd /tmp && unzip docker.zip ) \
-    && rm -rf /etc/skel && mv /tmp/dotfiles-docker /etc/skel \
-    ## skel dotfiles
-    && git clone --depth 1 https://github.com/junegunn/fzf.git /etc/skel/.fzf \
-    && ( cd /etc/skel/.fzf/bin && curl -fL ${FZF_URL} | tar xzf - ) \
-    && HOME=/etc/skel vim +PlugInstall +qall --cmd 'set rtp^=/etc/skel/.vim' \
-    && cp /etc/skel/.dotfiles-site/files/vim/plugins/kazoo_erlc.vim /etc/skel/.vim/bundle/ale/ale_linters/erlang/ \
-    ## root dotfiles
-    && rm -rf /root && cp -R /etc/skel /root \
-    ## cleanup
-    && rm -rf /tmp/*
-
-COPY entrypoint.sh /entrypoint.sh
+COPY docker-entrypoint.sh /docker-entrypoint.sh
 
 EXPOSE 11500 8000 5555
 
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/docker-entrypoint.sh"]
