--- a/kazoo/stacks/all_kz/docker-compose.yml
+++ b/kazoo/stacks/all_kz/docker-compose.yml
@@ -13,23 +13,23 @@ x-node-env:
 x-devnode-cfg:
   &kz-dev
     - type: bind
-      source: ${KAZOO_SRC_PATH:-/home/hesaam/work/2600hz/kazoo/master}
+      source: ${wKazoo}/master
       target: /opt/kazoo
       read_only: false
     - type: bind
-      source: ${KAZOO_SOUNDS_PATH:-/home/hesaam/work/2600hz/kazoo/sounds/kazoo-core}
+      source: ${wKazoo}/sounds/kazoo-core
       target: /opt/sounds
       read_only: true
     - type: bind
-      source: /home/hesaam/work/2600hz/kazoo/docker/scripts
-      target: /opt/scripts
-      read_only: true
-    - type: bind
-      source: /home/hesaam/work/2600hz/kazoo/monster-ui
+      source: ${wKazoo}/monster-ui
       target: /opt/monster-ui
       read_only: true
     - type: bind
-      source: ${KAZOO_CONFIG_PATH:-/home/hesaam/work/2600hz/kazoo/docker/kazoo/stacks/all_kz/config.ini}
+      source: ${wWork}/dockerfiles/scripts
+      target: /opt/scripts
+      read_only: true
+    - type: bind
+      source: ${wWork}/dockerfiles/kazoo/stacks/all_kz/config.ini
       target: /etc/kazoo/config.ini
 
 services:
@@ -47,7 +47,7 @@ services:
         mode: host
     volumes:
       - type: bind
-        source: ${COUDB_CONFIG_PATH:-/home/hesaam/work/2600hz/kazoo/docker/kazoo/stacks/all_kz/couchdb_cluster.ini}
+        source: ${wWork}/dockerfiles/kazoo/stacks/all_kz/couchdb_cluster.ini
         target: /opt/couchdb/etc/local.d/20-cluster.ini
       - type: volume
         # source: 'couchdb_data'
@@ -179,10 +179,10 @@ services:
         source: ./monster-entrypoint.sh
         target: /monster-entrypoint.sh
       - type: bind
-        source: ${MONSTER_PATH:-/home/hesaam/work/2600hz/kazoo/monster-ui}
+        source: ${wKazoo}/monster-ui
         target: "/opt/monster-ui"
       - type: bind
-        source: ${SU_EXEC_BIN:-/home/hesaam/work/2600hz/kazoo/su-exec/su-exec}
+        source: ${wKazoo}/su-exec/su-exec
         target: "/su-exec"
     ports:
       - target: 3000
@@ -195,26 +195,26 @@ services:
         aliases:
           - 'monster-ui.local'
 
-  mailhog:
-    image: 'mailhog/mailhog:latest'
-    hostname: 'mailcatcher'
-    ports:
-      - target: 8025
-        mode: host
-      - target: 1025
-        mode: host
-    networks:
-      - kazoo
-
-  # mailcatcher:
-  #   image: 'schickling/mailcatcher'
+  # mailhog:
+  #   image: 'mailhog/mailhog:latest'
+  #   hostname: 'mailcatcher'
   #   ports:
-  #     - target: 1080
+  #     - target: 8025
   #       mode: host
   #     - target: 1025
   #       mode: host
   #   networks:
   #     - kazoo
+
+  mailcatcher:
+    image: 'schickling/mailcatcher'
+    ports:
+      - target: 1080
+        mode: host
+      - target: 1025
+        mode: host
+    networks:
+      - kazoo
 
 networks:
   # kazoo_public:
