--- a/kz-official-dev/composer/docker-compose.yml
+++ b/kz-official-dev/composer/docker-compose.yml
@@ -2,16 +2,13 @@ version: '3.7'
 
 x-node-env:
   &kz-env
+    LOCAL_USER: "true"
     TERM: screen-256color
     KAZOO_COOKIE: change_me
-    LC_CTYPE: en_US.UTF-8
-    LANG: en_US.UTF-8
-    CODE_LOADING_MODE: interactive
-    RELX_REPLACE_OS_VARS: "true"
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/kazoo/_rel/kazoo/bin"
 
-x-devnode-cfg:
-  &kz-dev
+x-devol-cfg:
+  &kz-vol
     - type: bind
       source: ${wKazoo}/master
       target: /opt/kazoo
@@ -29,7 +26,7 @@ x-devnode-cfg:
       target: /opt/scripts
       read_only: true
     - type: bind
-      source: ${wWork}/dockerfiles/kazoo/stacks/all_kz/config.ini
+      source: ./config.ini
       target: /etc/kazoo/config.ini
 
 services:
@@ -38,59 +35,65 @@ services:
     hostname: 'couchdb.local'
     environment:
       NODENAME: 'couchdb.local'
-    ports:
-      - target: 9100
-      - target: 5984
-        mode: host
-      - target: 5986
-        mode: host
     volumes:
       - type: bind
         source: ${wWork}/dockerfiles/kazoo/stacks/all_kz/couchdb_cluster.ini
         target: /opt/couchdb/etc/local.d/20-cluster.ini
       - type: volume
         target: "/opt/couchdb/data"
-    networks:
-      kazoo:
+    network_mode: host
+    # when not using network_mpde=host
+    # ports:
+    #   - target: 9100
+    #   - target: 5984
+    #     mode: host
+    #   - target: 5986
+    #     mode: host
+    # networks:
+    #   kazoo:
 
   rabbitmq:
     image: rabbitmq:3-management
     hostname: 'rabbitmq.local'
-    ports:
-      - target: 15672 # management UI
-        mode: host
-      - target: 5672 # AMQP port
-        mode: host
-    networks:
-      kazoo:
+    network_mode: host
+    # when not using network_mpde=host
+    # ports:
+    #   - target: 15672 # management UI
+    #     mode: host
+    #   - target: 5672 # AMQP port
+    #     mode: host
+    # networks:
+    #   kazoo:
 
   kazoo_apps:
-    image: ${KZ_DEV_BASE_IMAGE:-kz-dev-base:19}
+    image: icehess/kz-dev-env:19
     hostname: 'kapps.local'
     environment:
        << : *kz-env
        KAZOO_NODE: kazoo_apps
        NODE_NAME: kazoo_apps
        REL: kazoo_apps
-    volumes: *kz-dev
-    ports:
-      - target: 11500 # Erlang
-        mode: host
-      - target: 8000 # Crossbar
-        mode: host
-      - target: 5555 # Websocket
-        mode: host
-      - target: 25 # Fax SMTP
-        mode: host
-      - target: 8001 # GraphQL
-        mode: host
+    volumes: *kz-vol
     tty: true
     command: ["bash"]
-    networks:
-      kazoo:
+    network_mode: host
+    # when not using network_mpde=host
+    # ports:
+    #   - target: 11500 # Erlang
+    #     mode: host
+    #   - target: 8000 # Crossbar
+    #     mode: host
+    #   - target: 5555 # Websocket
+    #     mode: host
+    #   - target: 25 # Fax SMTP
+    #     mode: host
+    #   - target: 8001 # GraphQL
+    #     mode: host
+    # networks:
+    #   kazoo:
 
   kazoo_ecallmgr:
-    image: ${KZ_DEV_BASE_IMAGE:-kz-dev-base:19}
+    image: icehess/kz-dev-env:19
     hostname: 'ecallmgr.local'
     environment:
        << : *kz-env
@@ -98,107 +101,110 @@ services:
        NODE_NAME: ecallmgr
        REL: ecallmgr
        KAZOO_APPS: "ecallmgr"
-    volumes: *kz-dev
-    ports:
-      - target: 11500
-        mode: host
+    volumes: *kz-vol
     command: ["bash"]
     tty: true
-    networks:
-      kazoo:
+    network_mode: host
+    # when not using network_mpde=host
+    # ports:
+    #   - target: 11500
+    #     mode: host
+    # networks:
+    #   kazoo:
 
   freeswitch:
-    image: icehess/kz-dev-fs:latest
+    image: icehess/kz-fs:latest
     hostname: 'freeswitch.local'
+    command: /usr/bin/docker-freeswitch start
     environment:
-       KZ_TRACE: "true"
-    networks:
-      kazoo:
+        LOCAL_USER: "true"
+    #    FS_TRACE: "true"
+    network_mode: host
+    # when not using network_mpde=host
+    # networks:
+    #   kazoo:
 
   kamailio:
-    image: icehess/kz-dev-km:latest
+    image: icehess/kz-kam:latest
     hostname: 'kamailio.local'
+    command: /usr/bin/docker-kamailio start
     environment:
-       ENABLE_SERVICE_NAME: "false"
-       ENABLE_ADVERTISE: "false"
-       KZ_TRACE: "true"
-       KZ_WEBSOCKET_ENABLED: "true"
-       PUSHER_ROLE: "true"
-       PRESENCE_NOTIFY_SYNC_ROLE: "true"
-    ports:
-      - published: 5060 # SIP TCP
-        target: 5060
-        protocol: tcp
-        mode: host
-      - published: 5060 # SIP UDP
-        target: 5060
-        protocol: udp
-        mode: host
-      - published: 5061 # SSIP (SIP TLS)
-        target: 5061
-        protocol: tcp
-        mode: host
-      - published: 7000 # SIP ALG TCP
-        target: 7000
-        protocol: tcp
-        mode: host
-      - published: 7000 # SIP ALG UDP
-        target: 7000
-        protocol: udp
-        mode: host
-      - published: 7001 # SSIP ALG
-        target: 7001
-        protocol: tcp
-        mode: host
-      - published: 5064 # http/https/websocket
-        target: 5064
-        protocol: tcp
-        mode: host
-      - published: 5065 # http/https/websocket
-        target: 5065
-        protocol: tcp
-        mode: host
-    networks:
-      kazoo:
+        LOCAL_USER: "true"
+    #     ENABLE_SIP_TRACE_ROLE: "true"
+    network_mode: host
+    # when not using network_mpde=host
+    # ports:
+    #   - published: 5060 # SIP TCP
+    #     target: 5060
+    #     protocol: tcp
+    #     mode: host
+    #   - published: 5060 # SIP UDP
+    #     target: 5060
+    #     protocol: udp
+    #     mode: host
+    #   - published: 5061 # SSIP (SIP TLS)
+    #     target: 5061
+    #     protocol: tcp
+    #     mode: host
+    #   - published: 7000 # SIP ALG TCP
+    #     target: 7000
+    #     protocol: tcp
+    #     mode: host
+    #   - published: 7000 # SIP ALG UDP
+    #     target: 7000
+    #     protocol: udp
+    #     mode: host
+    #   - published: 7001 # SSIP ALG
+    #     target: 7001
+    #     protocol: tcp
+    #     mode: host
+    #   - published: 5064 # http/https/websocket
+    #     target: 5064
+    #     protocol: tcp
+    #     mode: host
+    #   - published: 5065 # http/https/websocket
+    #     target: 5065
+    #     protocol: tcp
+    #     mode: host
+    # networks:
+    #   kazoo:
 
-  monster-ui:
-    image: ${MONSTER_IMG:-node:8.11.3-stretch}
-    hostname: 'monster-ui.local'
-    environment:
-       TERM: screen-256color
-       LC_CTYPE: en_US.UTF-8
-       LANG: en_US.UTF-8
-    volumes:
-      - type: bind
-        source: ./monster-entrypoint.sh
-        target: /monster-entrypoint.sh
-      - type: bind
-        source: ${wKazoo}/monster-ui
-        target: "/opt/monster-ui"
-      - type: bind
-        source: ${wKazoo}/su-exec/su-exec
-        target: "/su-exec"
-    ports:
-      - target: 3000
-        mode: host
-    tty: true
-    entrypoint: /monster-entrypoint.sh
-    command: ["/opt/monster-ui/node_modules/gulp/bin/gulp.js"]
-    networks:
-      kazoo:
+  # monster-ui:
+  #   image: ${MONSTER_IMG:-node:8.11.3-stretch}
+  #   hostname: 'monster-ui.local'
+  #   environment:
+  #      TERM: screen-256color
+  #   volumes:
+  #     - type: bind
+  #       source: ./monster-entrypoint.sh
+  #       target: /monster-entrypoint.sh
+  #     - type: bind
+  #       source: ${wKazoo}/monster-ui
+  #       target: "/opt/monster-ui"
+  #   tty: true
+  #   entrypoint: /monster-entrypoint.sh
+  #   command: ["/opt/monster-ui/node_modules/gulp/bin/gulp.js"]
+  #   network_mode: host
+    # when not using network_mpde=host
+    # ports:
+    #   - target: 3000
+    #     mode: host
+    # networks:
+    #   kazoo:
 
   mailcatcher:
     image: 'schickling/mailcatcher'
-    ports:
-      - target: 1080
-        mode: host
-      - target: 1025
-        mode: host
-    networks:
-      - kazoo
+    network_mode: host
+    # when not using network_mpde=host
+    # ports:
+    #   - target: 1080
+    #     mode: host
+    #   - target: 1025
+    #     mode: host
+    # networks:
+    #   - kazoo
 
-networks:
-  kazoo_public:
-  kazoo:
-    attachable: true
+# networks:
+#   kazoo:
+#     attachable: true
 
