--- a/kz-official-dev/composer/config.ini
+++ b/kz-official-dev/composer/config.ini
@@ -1,10 +1,10 @@
 [amqp]
-uri = "amqp://guest:guest@rabbitmq:5672"
+uri = "amqp://guest:guest@127.0.0.1:5672"
 pool_size=250
 
 
 [bigcouch]
-ip = "couchdb"
+ip = "127.0.0.1"
 port = 5984
 
 admin_port = 5986
